# ray-cpp

./: .clang-format  .gitignore  CMakeLists.txt  bmpIO.cpp  bmpIO.h  camera.cpp  camera.h  illumination.cpp  illumination.h  intersectData.cpp  intersectData.h  main.cpp  object.cpp  object.h  ray.cpp  ray.h  utils.h  world.cpp  world.h
libs/sdl2/: SDL2.exp  SDL2d.lib  SDL2maind.lib
qt_src/: CMakeLists.txt  main.cpp
shaders/: flat.hlsl
src/: CMakeLists.txt  Camera.cpp  Camera.h  SceneViewer.cpp  SceneViewer.h  SceneViewer.hpp  bmpIO.cpp  bmpIO.h  bmpIO.hpp  camera.cpp  camera.h  camera.hpp  file_io.cpp  frame.hpp  illumination.cpp  illumination.h  intersectData.cpp  intersectData.h  main.cpp  material.cpp  material.h  material.hpp  object.cpp  object.h  object.hpp  ray.cpp  ray.h  ray.hpp  scene.cpp  scene.h  scene.hpp  shader.cpp  shader.h  shader.hpp  tracer.cpp  tracer.hpp  utils.cpp  utils.h  utils.hpp
src/d3d_viewer/: CMakeLists.txt  Common.hpp  Renderer.cpp  Renderer.hpp  ResourceManager.cpp  ResourceManager.hpp  SceneViewer.cpp  SceneViewer.hpp  Shaders.cpp  Shaders.hpp  main.cpp
src/geometry/: CMakeLists.txt  material.cpp  material.hpp  object.cpp  object.hpp  oct_tree.cpp  oct_tree.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp
src/gui/: CMakeLists.txt  main.cpp
src/importer/: CMakeLists.txt  file_io.cpp  file_io.hpp  scene_importer.cpp  scene_importer.hpp
src/math/: ray.hpp
src/ray_tracer/: CMakeLists.txt  bmpIO.cpp  bmpIO.hpp  camera.hpp  frame.hpp  main.cpp  tracer.cpp  tracer.hpp
src/software_renderer/: CMakeLists.txt  README.md  SoftwareRenderer.cpp  SoftwareRenderer.hpp  TODO  canvas.cpp  canvas.h  clipper.cpp  clipper.h  lighting.cpp  main.cpp  obj.cpp  obj.h  pipeline.h  polygon.cpp  polygon.h  rasterizer.cpp  rasterizer.h  transform.cpp  triangleRasterizer.cpp  triangleRasterizer.h  triangulation.cpp  utils.cpp  utils.h  vbo.cpp  vbo.h  window.cpp  window.h
